# kittylib

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindDirectX.cmake  FindMacros.cmake
examples/: CMakeLists.txt
src/: kitty.hpp
src/modules/: img.hpp  ttf.hpp
src/os/: keyboard.hpp  os.cpp  os.hpp  windows.cpp  windows.hpp
src/renderer/: renderer.hpp  texture.hpp
src/renderer/d3d9/: d3d9.cpp  d3d9.hpp  d3d9_tex_impl.hpp
src/renderer/opengl/: opengl.cpp  opengl.hpp
src/stitches/: stitch_d3d9.hpp  stitch_gl.hpp
src/utils/: color.hpp  math.hpp  renderlist.hpp  vec2.hpp
